--- a/Recipist Android App/app/src/main/res/layout/activity_main.xml
+++ b/Recipist Android App/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="qzd919.recipist.MainActivity">
+    tools:context="qzd919.recipist.MainActivity"
+    android:background="@drawable/timg">
 
     <EditText
         android:id="@+id/ingredientText"
