Revert "Final changes"
This reverts commit 2b71900074e706f8f0956de684f61210e9edd9e8.

--- a/Recipist Android App/app/src/main/res/layout/activity_main.xml
+++ b/Recipist Android App/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="qzd919.recipist.MainActivity"
-    android:background="@drawable/timg">
+    tools:context="qzd919.recipist.MainActivity">
 
     <EditText
         android:id="@+id/ingredientText"
